--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 
 @import "./base/common";
 @import "./base/page";
+@import "./components/container";
 @import "./components/buttons";
 @import "./layout/header";
 @import "./layout/hero";
